@@ -4,18 +4,21 @@ import org.jobrunr.utils.StringUtils;
 import org.jobrunr.utils.annotations.VisibleFor;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 import java.util.Map;
 import java.util.StringJoiner;
 
 import static java.util.Optional.ofNullable;
+import static org.jobrunr.server.carbonaware.CarbonAwareJobProcessingConfiguration.CARBON_INTENSITY_FORECAST_PATH;
 import static org.jobrunr.utils.CollectionUtils.mapOf;
 
 /**
  * Internal class for JobRunr to access all {@link CarbonAwareJobProcessingConfiguration} details
  */
 public class CarbonAwareJobProcessingConfigurationReader {
+
     private final CarbonAwareJobProcessingConfiguration carbonAwareJobProcessingConfiguration;
 
     public CarbonAwareJobProcessingConfigurationReader(CarbonAwareJobProcessingConfiguration carbonAwareJobProcessingConfiguration) {
@@ -31,11 +34,7 @@ public class CarbonAwareJobProcessingConfigurationReader {
     }
 
     public static String getCarbonIntensityForecastApiRootUrl(String baseUrl) {
-        return baseUrl + getCarbonIntensityForecastApiPath();
-    }
-
-    public static String getCarbonIntensityForecastApiPath() {
-        return "/carbon-intensity/forecast";
+        return baseUrl + CARBON_INTENSITY_FORECAST_PATH;
     }
 
     public Duration getPollInterval() {
@@ -43,7 +42,7 @@ public class CarbonAwareJobProcessingConfigurationReader {
     }
 
     URL getCarbonIntensityForecastApiFullPathUrl() throws MalformedURLException {
-        return new URL(getCarbonIntensityApiBaseUrl() + getCarbonIntensityForecastQueryString());
+        return URI.create(getCarbonIntensityApiBaseUrl() + getCarbonIntensityForecastQueryString()).toURL();
     }
 
     public String getDataProvider() {
